# lican

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.VSCodeCounter/2025-09-29_19-07-46/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-10-01_22-12-04/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-10-04_12-58-27/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-10-05_13-19-25/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
LICANWRITE0/: main.lican
TEMP_LICAN/: main.lican  math.lican
include/: ast.hh  ast.hpp  constants.hpp  core.hh  core.hpp  licanapi.hh  licanapi.hpp  symbol.hh  symbol.hpp  token.hh  token.hpp  util.hh  util.hpp
liproj/: constants.lican  main.lican  mylib.lican  ref.lican
src/: ast.cc  ast.cpp  core.cc  core.cpp  generate.cc  generate.cpp  lex.cc  lex.cpp  licanapi.cc  licanapi.cpp  main.cc  main.cpp  parse.cc  parse.cpp  preprocessor.cpp  semantic.cc  semantic.cpp
